[gd_scene load_steps=12 format=3 uid="uid://b8bgign6brcj4"]

[ext_resource type="Script" path="res://Attacking/enemy_2.gd" id="1_82w1w"]
[ext_resource type="Texture2D" uid="uid://uy7o4xiaxbtn" path="res://Assets/shank.png" id="2_0ijkr"]
[ext_resource type="Script" path="res://Attacking/HurtBox.gd" id="3_6lof6"]
[ext_resource type="Texture2D" uid="uid://fy3x3217x58r" path="res://Assets/light.png" id="4_bipy6"]
[ext_resource type="AudioStream" uid="uid://bcaj674kgxeh6" path="res://Assets/Sound Effects/Attacking/Hit_Hurt38.wav" id="5_53k25"]
[ext_resource type="AudioStream" uid="uid://b0tjmkxbt7ywd" path="res://Assets/Sound Effects/Attacking/shootsound.wav" id="6_qlwkj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nh0vm"]
size = Vector2(34, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0npwy"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_utpq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_apetw"]
resource_name = "default"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4anbc"]
_data = {
"RESET": SubResource("Animation_utpq3"),
"default": SubResource("Animation_apetw")
}

[node name="Enemy2" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_82w1w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, 2.38419e-07)
texture = ExtResource("2_0ijkr")
hframes = 4

[node name="HurtBox" type="Area2D" parent="."]
input_pickable = false
script = ExtResource("3_6lof6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_nh0vm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0npwy")

[node name="ShipDetection" type="Node2D" parent="."]

[node name="RayCast2D1" type="RayCast2D" parent="ShipDetection"]
position = Vector2(0, 24)
target_position = Vector2(0, 8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="ShipDetection"]
position = Vector2(24, 0)
target_position = Vector2(8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="ShipDetection"]
position = Vector2(0, -24)
target_position = Vector2(0, -8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D4" type="RayCast2D" parent="ShipDetection"]
position = Vector2(-24, 0)
target_position = Vector2(-8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="WanderTimer" type="Timer" parent="."]

[node name="SpawnDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_4anbc")
}

[node name="Lights" type="Node2D" parent="."]

[node name="EyeLight" type="PointLight2D" parent="Lights"]
position = Vector2(8, 1.13687e-13)
scale = Vector2(1.36719, 1.36719)
color = Color(0.898039, 0.243137, 0, 1)
energy = 1.25
texture = ExtResource("4_bipy6")
texture_scale = 0.01

[node name="EyeLight2" type="PointLight2D" parent="Lights"]
position = Vector2(11, -2)
scale = Vector2(1.36719, 1.36719)
color = Color(0.945098, 0.258824, 0, 1)
energy = 1.25
texture = ExtResource("4_bipy6")
texture_scale = 0.01

[node name="EyeLight3" type="PointLight2D" parent="Lights"]
position = Vector2(13, 6.77626e-21)
scale = Vector2(1.36719, 1.36719)
color = Color(1, 0.333333, 0.145098, 1)
energy = 1.25
texture = ExtResource("4_bipy6")
texture_scale = 0.01

[node name="Fire" type="PointLight2D" parent="Lights"]
position = Vector2(-9, -1)
scale = Vector2(1.36719, 1.36719)
color = Color(0.85098, 0.227451, 0, 1)
energy = 1.7
texture = ExtResource("4_bipy6")
texture_scale = 0.01

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_53k25")
volume_db = 7.0
pitch_scale = 0.8

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qlwkj")
volume_db = -10.0
pitch_scale = 2.0

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="SpawnDelayTimer" to="." method="_on_spawn_delay_timer_timeout"]
